feat: rollup, webpack 파일 동일하게 변경

--- a/rollup/package.json
+++ b/rollup/package.json
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^15.2.3",
     "rollup": "^4.14.1"
   },
   "dependencies": {
