--- a/webpack/package.json
+++ b/webpack/package.json
@@ -1,22 +1,27 @@
 {
-  "name": "webpack",
+  "name": "test",
   "version": "1.0.0",
   "description": "",
-  "private": "true",
+  "main": "index.jsx",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "start": "webpack serve --open",
+    "build": "webpack --mode production"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "css-loader": "^7.0.0",
-    "style-loader": "^3.3.4",
-    "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4"
-  },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.24.4",
+    "@babel/preset-env": "^7.24.4",
+    "@babel/preset-react": "^7.24.1",
+    "babel-loader": "^9.1.3",
+    "html-webpack-plugin": "^5.6.0",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   }
 }
