--- a/rollup/package.json
+++ b/rollup/package.json
@@ -1,32 +1,20 @@
 {
-  "name": "test",
-  "type": "module",
+  "name": "rollup",
   "version": "1.0.0",
   "description": "",
-  "main": "index.jsx",
+  "type": "module",
+  "main": "rollup.config.js",
   "scripts": {
-    "dev": "ROLLUP_WATCH=true rollup -c -w",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rollup --config"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
   "devDependencies": {
-    "@babel/core": "^7.24.4",
-    "@babel/preset-env": "^7.24.4",
-    "@babel/preset-react": "^7.24.1",
-    "@rollup/plugin-babel": "^6.0.4",
-    "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-replace": "^5.0.5",
-    "babel-loader": "^9.1.3",
-    "html-webpack-plugin": "^5.6.0",
-    "rollup": "^4.14.1",
-    "rollup-plugin-livereload": "^2.0.5",
-    "rollup-plugin-serve": "^1.1.1"
+    "@rollup/plugin-terser": "^0.4.4",
+    "rollup": "^4.17.2",
+    "rollup-plugin-visualizer": "^5.12.0"
   }
 }
